Fix text wrap in button

--- a/src/widgets/ui/blocks/collect/CollectLinkMini/CollectLinkMini.module.scss
+++ b/src/widgets/ui/blocks/collect/CollectLinkMini/CollectLinkMini.module.scss
@@ -73,5 +73,5 @@
 	line-height: 1.2;
 }
 .button {
-	text-wrap: nowrap;
+	text-wrap: nowrap !important;
 }
